Add Data-Driven Decision Making course to teaching section
- Created new course entry for DDM course in Master's in Business Analytics
- Added program information link to Universidad de Chile Master's program
- Updated archive-single.html to display program links for teaching courses
- Course includes syllabus download and program information links

--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -44,6 +44,9 @@
 
         {% if post.collection == 'teaching' %}
           <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
+          {% if post.programurl %}
+            <p><a href="{{ post.programurl }}" target="_blank" rel="noopener">Program Information</a></p>
+          {% endif %}
           {% if post.courseurl %}
             <p><a href="{{ post.courseurl }}">Download Syllabus</a></p>
           {% endif %}
